--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -20,9 +20,9 @@
     <depends>JavaScript</depends>
     <depends>com.intellij.css</depends>
     <depends>com.intellij.modules.platform</depends>
-    <depends optional="true" config-file="less.xml">org.jetbrains.plugins.less</depends>
-    <depends optional="true" config-file="sass.xml">org.jetbrains.plugins.sass</depends>
-    <depends optional="true" config-file="stylus.xml">org.jetbrains.plugins.stylus</depends>
+<!--    <depends optional="true" config-file="less.xml">org.jetbrains.plugins.less</depends>-->
+<!--    <depends optional="true" config-file="sass.xml">org.jetbrains.plugins.sass</depends>-->
+<!--    <depends optional="true" config-file="stylus.xml">org.jetbrains.plugins.stylus</depends>-->
 
     <actions>
         <action class="com.zxy.ijplugin.miniprogram.action.CreateWechatMiniProgramPageAction"
